gateway.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gateway
    spec:
      volumes:
        - name: tls
          secret:
            secretName: crud-tls
      containers:
        - name: gateway
          image: risla8/gateway
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: tls
              mountPath: /home/certs
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      targetPort: http
      port: 80
      protocol: TCP
---
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    ingress.appscode.com/type: NodePort
    ingress.appscode.com/use-node-port: "true"
    ingress.appscode.com/default-option: '{"dontlognull": "true", "log": "crit"}'
    ingress.appscode.com/rewrite-target: "/"
    ingress.appscode.com/max-connections: "100000"
spec:
  tls:
      - secretName: crud2-tls
        hosts:
          - gateway.local
  rules:
    - host: gateway.local
      http:
        paths:
          - path: /api/v1/
            backend:
              serviceName: gateway
              servicePort: 80
              headerRules:
                - X-Forwarded-Host %[base]
              backendRules:
                - "option httpchk GET /healthz"
                - "http-check expect rstring (.)"
                - "http-response set-header X-XSS-Protection 1;mode=block"
                - "http-response set-header X-Frame-Options SAMEORIGIN"
